adds transitions, labels

--- a/index.html
+++ b/index.html
@@ -94,13 +94,28 @@
         <h2 class="title">Чим ми займаємося</h2>
         <ul class="activities-list">
           <li>
-            <img src="./images/box-1.jpg" alt="печатання на клавіатурі" width="370" height="294" />
+            <div class="activities-box"><img src="./images/box-1.jpg" alt="печатання на клавіатурі" width="370"
+                height="294" />
+              <div class="activities-label">
+                <h3 class="activities-label-title">Десктопні додатки</h3>
+              </div>
+            </div>
           </li>
           <li>
-            <img src="./images/box-2.jpg" alt="смартфон у руці біля єкрану ноутбука" width="370" height="294" />
+            <div class="activities-box">
+              <img src="./images/box-2.jpg" alt="смартфон у руці біля єкрану ноутбука" width="370" height="294" />
+              <div class="activities-label">
+                <h3 class="activities-label-title">Мобільні додатки</h3>
+              </div>
+            </div>
           </li>
           <li>
-            <img src="./images/box-3.jpg" alt="планшет з палітрою кольорів у руках " width="370" height="294" />
+            <div class="activities-box">
+              <img src="./images/box-3.jpg" alt="планшет з палітрою кольорів у руках " width="370" height="294" />
+              <div class="activities-label">
+                <h3 class="activities-label-title">Дизайнерські рішення</h3>
+              </div>
+            </div>
           </li>
         </ul>
       </div>
