--- a/potfolio.html
+++ b/potfolio.html
@@ -55,8 +55,19 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-              <img class="portfolio-img" src="./images/example-1.jpg" alt="Приклад портфоліо-1" width="370"
-                height="294" />
+
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-1.jpg" alt="Приклад портфоліо-1" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
+
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Технокряк</h2>
                 <p class="portfolio-text">Веб-сайт</p>
@@ -65,8 +76,17 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-              <img class="portfolio-img" src="./images/example-2.jpg" alt="Приклад портфоліо-2" width="370"
-                height="294" />
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-2.jpg" alt="Приклад портфоліо-2" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-text">Дизайн</p>
@@ -75,8 +95,17 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-              <img class="portfolio-img" src="./images/example-3.jpg" alt="Приклад портфоліо-3" width="370"
-                height="294" />
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-3.jpg" alt="Приклад портфоліо-3" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Ресторан Seafood</h2>
                 <p class="portfolio-text">Додаток</p>
@@ -85,8 +114,17 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-              <img class="portfolio-img" src="./images/example-4.jpg" alt="Приклад портфоліо-4" width="370"
-                height="294" />
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-4.jpg" alt="Приклад портфоліо-4" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Проєкт Prime</h2>
                 <p class="portfolio-text">Маркетинг</p>
@@ -95,8 +133,17 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-              <img class="portfolio-img" src="./images/example-5.jpg" alt="Приклад портфоліо-5" width="370"
-                height="294" />
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-5.jpg" alt="Приклад портфоліо-5" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Проєкт Boxes</h2>
                 <p class="portfolio-text">Додаток</p>
@@ -105,8 +152,17 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-              <img class="portfolio-img" src="./images/example-6.jpg" alt="Приклад портфоліо-6" width="370"
-                height="294" />
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-6.jpg" alt="Приклад портфоліо-6" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                 <p class="portfolio-text">Веб-сайт</p>
@@ -115,29 +171,55 @@
           </li>
           <li class="portfolio-item">
             <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-
-              <img class="portfolio-img" src="./images/example-7.jpg" alt="Приклад портфоліо-7" width="370"
-                height="294" />
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-7.jpg" alt="Приклад портфоліо-7" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Видання Limited Edition</h2>
                 <p class="portfolio-text">Дизайн</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-item"> <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-
-              <img class="portfolio-img" src="./images/example-8.jpg" alt="Приклад портфоліо-8" width="370"
-                height="294" />
+          <li class="portfolio-item">
+            <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-8.jpg" alt="Приклад портфоліо-8" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Проєкт LAB</h2>
                 <p class="portfolio-text">Маркетинг</p>
               </div>
             </a>
           </li>
-          <li class="portfolio-item"> <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
-
-              <img class="portfolio-img" src="./images/example-9.jpg" alt="Приклад портфоліо-9" width="370"
-                height="294" />
+          <li class="portfolio-item">
+            <a class="portfolio-link" href="#" target="_blank" rel="noopener noreferrer">
+              <div class="img-box">
+                <img class="portfolio-img" src="./images/example-9.jpg" alt="Приклад портфоліо-9" width="370"
+                  height="294" />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-info">
                 <h2 class="portfolio-title">Growing Business</h2>
                 <p class="portfolio-text">Додаток</p>
